answering all questions except 20

--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("Yuchun Zhu", "Lim Zhen Yang", "Mingshi Yue", 
+           "Kevin jiang", "Yifan Guo"),
+  github_username = c("meessi15", "yangsubwayceo", "Ethanyue123", 
+                      "jky040223", "Alen050426"), 
+  colour = c("blue", "grey", "yellow", 
+             "yellow", "green"),
+  hobby = c("football", "listening to music", "woman", 
+            "basketball", "playing chase"),
+  favourite_number = c(10, 7, 6, 4, 3)
   )
 
 team_data
@@ -54,9 +54,9 @@ this code can create a bar chart with the data from the 'team_data'. Also, the c
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "eman", 
+          y = "01 - 1 rebmun",
+          title = "puorg")
 ```
 
 *Remove this text (including the stars), and add your answer for Exercise 19 here.*
